@@ -3,7 +3,7 @@ Now:
 
 
 Next:
-    - remove the tonumber() usage and just force the data types. Also can remove checking for blank strings. Include as Changes in changelog.
+    - add some larger text sizes, as the current ones are right for GUIs but not messages.
     - look at way via remote interfaces that existing text's can be removed by a name. For use with scripting chat integrations, i.e. add a timer that is then removed when the player dies. Will need to avoid duplicate entries being created with the same name.
 
 
